[gd_scene load_steps=23 format=1]

[ext_resource path="res://Character/Player/Scripts/ControllableCharacter.gd" type="Script" id=1]
[ext_resource path="res://Weapon/DefaultSword/DefaultSword.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/Player/Sprites/knight_64_attackdown.png" type="Texture" id=3]
[ext_resource path="res://Weapon/DefaultSword/atk2_air_downward_thrust.tres" type="Animation" id=4]
[ext_resource path="res://Weapon/DefaultSword/atk2_thrust.tres" type="Animation" id=5]
[ext_resource path="res://Weapon/DefaultSword/atk2_thrust_callback.tres" type="Animation" id=6]
[ext_resource path="res://Character/Player/Sprites/knight_64_jump.png" type="Texture" id=7]
[ext_resource path="res://Character/Player/Sprites/knight_64_idle.png" type="Texture" id=8]
[ext_resource path="res://Character/Player/Sprites/knight_64_run.png" type="Texture" id=9]
[ext_resource path="res://Character/Player/Sprites/knight_64_attack.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0
height = 68.011

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 35, 60 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 192, 5 )

[sub_resource type="Animation" id=5]

length = 0.02
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:vframes")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:hframes")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:texture")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:offset")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:hframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:vframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:offset")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.02
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:vframes")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:hframes")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:texture")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:offset")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ) ]
}

[sub_resource type="Animation" id=8]

length = 0.02
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:texture")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:offset")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:vframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:hframes")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]

length = 1.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:offset")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:vframes")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:hframes")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=10]

length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:vframes")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flip/Sprites:hframes")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flip/Sprites:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flip/Sprites:offset")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.02
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flip/Sprites:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=12]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("flip/Sprites:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 0.25, 1.0 ]
}

[node name="player" type="RigidBody2D" groups=[
"PLAYER",
]]

z/z = 10
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 4
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 2.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
MAX_RUN_SPEED = 800
JUMP_FORCE = 1200
EXTRA_GRAVITY = 2500
ACCERLERATION = 100
MAX_HEALTH = 20
INVULNERABLE_TIME = 100

[node name="flip" type="Node2D" parent="."]

[node name="DefaultSword" parent="flip" instance=ExtResource( 2 )]

damage = 1
push_back_force = Vector2( 200, -400 )

[node name="Sprites" type="Sprite" parent="flip"]

transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 6
frame = 3

[node name="interact_zone" type="Area2D" parent="flip"]

editor/display_folded = true
transform/pos = Vector2( 32, 0 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 16
collision/mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="flip/interact_zone"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="physic_collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ground_detector" type="RayCast2D" parent="."]

transform/pos = Vector2( -20, 65 )
enabled = true
cast_to = Vector2( 40, 0 )
layer_mask = 4
type_mask = 1

[node name="Camera2D" type="Camera2D" parent="."]

offset = Vector2( 0, -200 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="hurtbox" type="Area2D" parent="." groups=[
"HURTBOX",
"PLAYER",
]]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -0.59874 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]

transform/pos = Vector2( 0, -0.59874 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="oneway_leave" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, -32 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway_leave"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/atk2_air_downward_thrust = ExtResource( 4 )
anims/atk2_thrust = ExtResource( 5 )
anims/atk2_thrust_callback = ExtResource( 6 )
anims/falling_down = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jumping_up = SubResource( 7 )
anims/root = SubResource( 8 )
anims/run = SubResource( 9 )
anims/test = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_status" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/init = SubResource( 11 )
anims/invulnerable = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="oneway_leave" to="." method="_on_oneway_leave_body_enter"]


